# clean-arch-template

./: .gitignore  README.md
server/: .env.example  Dockerfile  pyproject.toml
server/app/: __init__.py  main.py
server/app/common/: constants.py
server/app/entities/constants/: __init__.py  project.py
server/app/entities/errors/: base.py  error.py  project.py
server/app/entities/models/: base.py  model.py  project.py
server/app/entities/repositories/: project.py  repo.py
server/app/entities/utils/: __init__.py  project.py
server/app/infrastructures/constants/: __init__.py  database.py
server/app/infrastructures/errors/: __init__.py  base.py  database.py
server/app/infrastructures/postgres/: __init__.py  database.py  project.py
server/app/infrastructures/sqlite_db/: database.py  project.py
server/app/infrastructures/utils/: __init__.py  database.py
server/app/routers/v1/: __init__.py  errors.py  service.py  services.py
server/app/settings/: __init__.py  base.py  config.py  dev.py
server/app/shared/: __init__.py
server/app/shared/constants/: __init__.py  common.py
server/app/shared/utils/: __init__.py  date_utils.py  logging.py  string_utils.py
server/app/use_cases/: project.py
server/app/use_cases/constants/: __init__.py  project.py
server/app/use_cases/dto/: base.py  project.py
server/app/use_cases/errors/: __init__.py  base.py  project.py
server/app/use_cases/mappers/: project.py
server/app/use_cases/utils/: __init__.py  project.py
server/docs/: clean_architecture.md  clean_architecture_guide.md
(+9 files in other folders)
